--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,10 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-freemarker</artifactId>
         </dependency>
         <dependency>
@@ -70,13 +74,13 @@
         <dependency>
             <groupId>com.github.binarywang</groupId>
             <artifactId>weixin-java-mp</artifactId>
-            <version>3.6.0</version>
+            <version>2.7.0</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/cn.springboot/best-pay-sdk -->
         <dependency>
             <groupId>cn.springboot</groupId>
             <artifactId>best-pay-sdk</artifactId>
-            <version>1.3.0</version>
+            <version>1.1.0</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -92,6 +96,11 @@
             <groupId>wxpay-sdk</groupId>
             <artifactId>wxpay-sdk</artifactId>
             <version>3.0.9</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.1.21</version>
         </dependency>
     </dependencies>
 
