--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
-    password: sdysjdsr1225*
+    password: 
     url: jdbc:mysql://localhost:3306/sell?characterEncoding=utf-8&useSSL=false
     type: com.alibaba.druid.pool.DruidDataSource
   jpa:
